# stock-scanner

./: .gitignore  config.json  main.py  pyproject.toml  requirements.txt  run.py  test.ipynb
app/: __init__.py  logger.py
app/container/: __init__.py  analyzer.py
app/errors/: handlers.py
app/routes/: analyze_routers.py  auth_routes.py  sse_routes.py  system_routes.py
app/services/: ai_client.py  analyzer.py  financial_utils.py  flask_web_services.py  prompt_builder.py  streaming_analyzer.py
app/static/: main.js  main_style.css
app/static/css/: login_style.css  main_style.css
app/static/html/: result_content.html
app/static/js/: main.js
app/templates/: login.html  main.html
app/utils/: analysis_manager.py  config.py  decorators.py  financial_utils.py  format_utils.py  sse_manager.py
